Get working ldap sign ins

--- a/templates/idp/partial.idp_form.twig
+++ b/templates/idp/partial.idp_form.twig
@@ -28,7 +28,7 @@
         <label for="ldap_base_dn">Base DN</label>
         <input class="text-input{{ has_error }}" type="text" name="ldap_base_dn" id="ldap_base_dn" maxlength="200" value="{{ form.ldap_base_dn }}">
         <small>
-            <b>Optional.</b> Specify a root or base DN to limit the users allowed to authenticate with Hal.
+            Specify a root or base DN to limit the users allowed to authenticate with Hal such as <code>dc=mycompany,dc=com</code>.
         </small>
     </li>
 
