--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -115,6 +115,12 @@
             {{ macros.disabled_button('Add Permissions') }}
         {% endif %}
 
+        {% if is_super %}
+            <a class="btn" href="{{ uriFor('user.edit', {'user': user.id}) }}">Edit User</a>
+        {% else %}
+            {{ macros.disabled_button('Edit User') }}
+        {% endif %}
+
         {% if can_disable %}
             {% if user.isDisabled %}
                 <form method="post" action="{{ uriFor('user.enable', {'user': user.id}) }}" class="form--inline">
