--- a/templates/base.twig
+++ b/templates/base.twig
@@ -40,7 +40,7 @@
             <main>
                 {% block breadcrumb %}
                     <ul class="breadcrumb mbm">
-                        <li><a href="{{ uriFor('dashboard') }}">Home</a></li>
+                        <li><a href="{{ uriFor('home') }}">Home</a></li>
                         {% block breadcrumb_links %}{% endblock %}
                        <li>
                             <b>
