--- a/templates/admin/audit_history.twig
+++ b/templates/admin/audit_history.twig
@@ -11,7 +11,7 @@
 {% block content %}
     {{ pagination.pagination(page, last, 'admin.audit_history', {}) }}
 
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th>Time</th>
