--- a/templates/admin/cache_management.twig
+++ b/templates/admin/cache_management.twig
@@ -67,7 +67,7 @@
 {% block permissions_cache %}
     <div class="meta-box meta-box--scrollable">
         {% if permissions %}
-            <table class="table--spacing-medium">
+            <table>
                 <thead>
                     <tr>
                         <th class="t70">Key</th>
@@ -96,7 +96,7 @@
 {% block doctrine_cache %}
     <div class="meta-box meta-box--scrollable">
         {% if doctrine_cached %}
-            <table class="table--spacing-medium">
+            <table>
                 <thead>
                     <tr>
                         <th>Key</th>
