--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -24,7 +24,7 @@
 
     {% if favorites %}
         <h2>Favorites</h2>
-        <table class="table--spacing-medium">
+        <table>
             <thead>
                 <tr>
                     <th>Application</th>
@@ -73,7 +73,7 @@
             placeholder="Search for an application or repository..."
             maxlength="100">
 
-        <table class="table--spacing-medium js-collapsible js-search-table">
+        <table class="js-collapsible js-search-table">
             <thead>
                 <tr>
                     <th>Application</th>
