--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -21,7 +21,7 @@
 
     <h2>Applications</h2>
     {% if targets %}
-        <table class="table--spacing-medium">
+        <table>
             <thead>
                 <tr>
                     <th>Application</th>
