--- a/templates/encrypted-configuration/encrypted_configuration.twig
+++ b/templates/encrypted-configuration/encrypted_configuration.twig
@@ -42,7 +42,7 @@
 {% endblock %}
 
 {% block configuration_table %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th class="t15">ID</th>
