--- a/templates/help/scripting.twig
+++ b/templates/help/scripting.twig
@@ -172,7 +172,7 @@
 {% endblock %}
 
 {% block build_vars %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <td>Variable</td>
@@ -205,7 +205,7 @@
 {% endblock %}
 
 {% block push_vars %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <td>Variable</td>
@@ -274,7 +274,7 @@ date: ''       # ISO 8601 date
 {% endblock %}
 
 {% block configuration_explanation %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <td>Property</td>
