--- a/templates/idp/id_providers.twig
+++ b/templates/idp/id_providers.twig
@@ -31,7 +31,7 @@
 {% block idp_table %}
 
     {% if id_providers %}
-        <table class="table--spacing-medium">
+        <table>
             <thead>
                 <tr>
                     <th class="t15">ID</th>
