--- a/templates/organization/organization.twig
+++ b/templates/organization/organization.twig
@@ -66,7 +66,7 @@
 {% block app_table %}
 
     {% if applications %}
-        <table class="table--spacing-medium">
+        <table>
             <thead>
                 <tr>
                     <th class="t15">ID</th>
