--- a/templates/partial.event_table.twig
+++ b/templates/partial.event_table.twig
@@ -2,7 +2,7 @@
 
 {% import 'macros.twig' as macros %}
 
-<table class="js-event-logs table--spacing-medium table--bodied">
+<table class="js-event-logs table--bodied">
     <thead>
         <tr>
             <th>Event</th>
