--- a/templates/partial.pending_job_table.twig
+++ b/templates/partial.pending_job_table.twig
@@ -1,7 +1,7 @@
 {% import 'macros.twig' as macros %}
 {% import 'macros.git.twig' as git_macros %}
 
-<table id="js-queue" class="table--spacing-medium">
+<table id="js-queue">
     <thead>
         <tr>
             <th>Job</th>
