--- a/templates/permissions/permissions.twig
+++ b/templates/permissions/permissions.twig
@@ -35,7 +35,7 @@
 {% endblock %}
 
 {% block user_table %}
-    <table class="table--spacing-medium table--topped">
+    <table class="table--topped">
         <thead>
             <tr>
                 <th class="t15">User ID</th>
