--- a/templates/queue/releases_history.twig
+++ b/templates/queue/releases_history.twig
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block releases %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th>Release</th>
