--- a/templates/release/macros.start_deploy.twig
+++ b/templates/release/macros.start_deploy.twig
@@ -1,7 +1,7 @@
 {% macro deploy_targets_table(targets, selected, can_user_deploy, can_deploy_now) %}
     {% import _self as macros %}
 
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th>Target</th>
