--- a/templates/release/rollback_release.twig
+++ b/templates/release/rollback_release.twig
@@ -46,7 +46,7 @@
     {% set can_rollback = current_authorizations.canDeploy(application, target.environment) %}
 
     <h2>Release History</h2>
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th>Release</th>
