--- a/templates/target-template/template.twig
+++ b/templates/target-template/template.twig
@@ -100,7 +100,7 @@
 
 {% block target_table %}
     {% if targets %}
-        <table class="table--spacing-medium">
+        <table>
             <thead>
                 <tr>
                     <th class="t15">ID</th>
