--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -29,7 +29,7 @@
 
 {% block cred_table %}
     {% if credentials %}
-        <table class="table--spacing-medium">
+        <table>
             <thead>
                 <tr>
                     <th class="t15">ID</th>
