--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block env_table %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th class="t15">ID</th>
