--- a/templates/partial.build_table.twig
+++ b/templates/partial.build_table.twig
@@ -1,7 +1,7 @@
 {% import 'macros.twig' as macros %}
 {% import 'macros.git.twig' as git_macros %}
 
-<table class="table--spacing-medium">
+<table>
     <thead>
         <tr>
             <th>Build</th>
