--- a/templates/partial.meta_table.twig
+++ b/templates/partial.meta_table.twig
@@ -1,6 +1,6 @@
 {% import _self as macros %}
 
-<table class="table--spacing-medium">
+<table>
     <thead>
         <tr>
             <th class="t40">Name</th>
