--- a/templates/partial.release_table.twig
+++ b/templates/partial.release_table.twig
@@ -1,6 +1,6 @@
 {% import 'macros.twig' as macros %}
 
-<table class="table--spacing-medium">
+<table>
     <thead>
         <tr>
             <th>Push</th>
