--- a/templates/queue/builds_history.twig
+++ b/templates/queue/builds_history.twig
@@ -28,7 +28,7 @@
 {% endblock %}
 
 {% block builds %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th>Build</th>
