--- a/templates/release/start_release.twig
+++ b/templates/release/start_release.twig
@@ -142,7 +142,7 @@
 {% endblock %}
 
 {% block add_metadata %}
-    <table class="table--spacing-medium js-metadata">
+    <table class="js-metadata">
         <thead>
             <tr>
                 <th class="t40">
