--- a/templates/target-template/templates.twig
+++ b/templates/target-template/templates.twig
@@ -33,7 +33,7 @@
 
     {% if sorted_templates %}
 
-        <table class="table--spacing-medium">
+        <table>
             <thead>
                 <tr>
                     <th class="t15">ID</th>
