--- a/templates/user/partial.tokens.twig
+++ b/templates/user/partial.tokens.twig
@@ -1,7 +1,7 @@
 {% import 'macros.twig' as macros %}
 
 {% block token_table %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th class="t10">ID</th>
