--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block user_table %}
-    <table class="table--spacing-medium">
+    <table>
         <thead>
             <tr>
                 <th class="t15">User ID</th>
