--- a/templates/vcs/vcs_providers.twig
+++ b/templates/vcs/vcs_providers.twig
@@ -31,7 +31,7 @@
 {% block vcs_table %}
 
     {% if vcs_providers %}
-        <table class="table--spacing-medium">
+        <table>
             <thead>
                 <tr>
                     <th class="t15">ID</th>
