--- a/templates/application/edit_application.twig
+++ b/templates/application/edit_application.twig
@@ -32,12 +32,11 @@
             </li>
         </ul>
 
-        <ul class="form-fields">
-            <li>
-                <label>Organization</label>
-                {% if organizations %}
+        <h4>Organization</h4>
+        {% if organizations|length > 0 %}
+            <ul class="form-fields form-wrapper">
+                <li>
                     <ul>
-
                         {% for organization in organizations %}
                             {% set is_selected = form.organization == organization.id ? ' checked' : '' %}
                             <li>
@@ -55,13 +54,12 @@
                                 Do not add to organization
                             </label>
                         </li>
-
                     </ul>
-                {% else %}
-                    <p>There are no organizations.</p>
-                {% endif %}
-            </li>
-        </ul>
+                </li>
+            </ul>
+        {% else %}
+            <p>There are no organizations available. You can add this later.</p>
+        {% endif %}
 
         <h4>Source Control</h4>
         {% if vcs|length > 0 %}
