--- a/templates/credentials/edit_credential.twig
+++ b/templates/credentials/edit_credential.twig
@@ -48,7 +48,7 @@
             </li>
 
             <li>
-                <div class="label">Is this an <b>Internal Only</b> credential?</div>
+                <h4>Is this an <b>Internal Only</b> credential?</h4>
                 <label for="is_internal" class="checkbox-check">
                     {% set is_selected = form.is_internal ? ' checked' : '' %}
                     <input type="checkbox" name="is_internal" id="is_internal" value="1" {{ is_selected }}>
