Remove scales css

--- a/sass/_settings-colors.scss
+++ b/sass/_settings-colors.scss
@@ -12,7 +12,9 @@ $slightly-less-bright-blue: #357793;
 $blue: #236298;
 $dark-blue: #01002b;
 
+$light-red: #fdd0ca;
 $red: #d63620;
+$dark-red: #ab1500;
 
 $orange: #ff7c00;
 $dark-orange: #cc6300;
