--- a/sass/components/_status.scss
+++ b/sass/components/_status.scss
@@ -8,8 +8,8 @@
 .status-block--warning {
     color: $white;
     font-size: 75%;
-    line-height: ms(6);
-    padding: ms(-6);
+    line-height: 2.25em;
+    padding: .5em;
     white-space: nowrap;
 }
 
