--- a/templates/styleguide.icons.html.twig
+++ b/templates/styleguide.icons.html.twig
@@ -418,11 +418,11 @@ zoom-out-2
             </div>
 
             <h2>Active Icons</h2>
-            <ul class="list--bare col-list" style="font-size:120%;">
+            <ul style="display:flex; flex-wrap:wrap; font-size:120%;">
                 {% for icon in icons_active %}
                     {% if icon %}
                         {% set icon = icon|trim %}
-                        <li>
+                        <li class="mvt" style="width:33%">
                             <svg class="icon"><use xlink:href="/icons.svg#{{ icon }}"></use></svg> <code>#{{ icon }}</code>
                         </li>
                     {% endif %}
@@ -430,11 +430,11 @@ zoom-out-2
             </ul>
 
             <h2>Other Icons</h2>
-            <ul class="list--bare col-list" style="font-size:120%;">
+            <ul style="display:flex; flex-wrap:wrap; font-size:120%;">
                 {% for icon in icons_inactive %}
                     {% if icon %}
                         {% set icon = icon|trim %}
-                        <li>
+                        <li class="mvt" style="width:33%">
                             <svg class="icon"><use xlink:href="/icons-other.svg#{{ icon }}"></use></svg> <code>#{{ icon }}</code>
                         </li>
                     {% endif %}
