--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1,38 +1,22 @@
-// Modular Scale
-$ms-base: 1em 1.5em;
-$ms-ratio: $fourth;
-$grids: 2;
-$gutters: 1/3;
-
-// Typography
-$font-unit: 1em;
+// Text
+$base-font-stack: "Helvetica Neue", helvetica, arial, sans-serif;
 $base-font-size: 1em;
 $base-line-height: 1.4em;
-$heading-font-stack: helvetica, arial, sans-serif;
-$sans-serif-font-stack: "Helvetica Neue", helvetica, arial, sans-serif;
-
-$min-line-padding: .1em;
-
-// Scales - buttons
-$btn-text-color: $white;
-$btn-background-color: $blue;
-$btn-border-color: shade($blue, 20%);
-$btn-border-width: 1px;
-
-$btn-hover-background-color: tint($blue, 10%);
-$btn-hover-text-color: $white;
-
-// Scales - tables
-
-$table-stripe-color: $light-grey;
+$base-text-color: $text-color;
 
 // Headings
-$h1-size: ms(5);
-$h2-size: ms(4);
-$h3-size: ms(3);
-$h4-size: ms(2);
-$h5-size: ms(1);
-$h6-size: ms(0);
+$heading-font-stack: helvetica, arial, sans-serif;
+$heading-color: $base-text-color;
+
+$h1-size: 2em;
+$h2-size: 2em;
+$h3-size: 1.75em;
+$h4-size: 1.25em;
+$h5-size: 1.25em;
+$h6-size: 1em;
+
+// Buttons
+$btn-text-color: $white;
 
 // Breakpoints
 $bp-large: 60em;
