--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -1,55 +1,7 @@
 // Forms
 
-// Use an unordered list to mark up your groups of form fields.
-.form-fields {
-    list-style: none;
-    margin: 0;
-}
-
 .form-fields > li {
     margin-top: 1em;
-}
-
-// Labels
-label, .label {
-    display: block;
-    margin-bottom: 0;
-}
-
-.text-input,
-.select-input,
-textarea {
-    width: 100%;
-    background: #fff;
-    box-shadow: inset 0 2px 0 $grey, inset 2px 0px 0 $grey, inset -2px 0px 0 $grey, inset 0px -2px 0 $grey;
-    &:focus {
-        box-shadow: inset 0 2px 0 $blue, inset 2px 0px 0 $blue, inset -2px 0px 0 $blue, inset 0px -2px 0 $blue;
-    }
-}
-
-.text-input:disabled, .text-input:read-only {
-    background: $light-grey;
-}
-
-.text-input.is-error,
-.select-input.is-error,
-textarea.is-error {
-    box-shadow: inset 0 2px 0 $red, inset 2px 0px 0 $red, inset -2px 0px 0 $red, inset 0px -2px 0 $red;
-}
-
-.error-list {
-    background: $error-color;
-    margin-left: 0;
-    padding: 0 2em;
-    color: $white;
-    li {
-        @include padding-y(.25em);
-    }
-}
-
-select {
-    width: 100%;
-    border: 1px solid $grey;
 }
 
 .form-wrapper {
@@ -60,6 +12,29 @@ select {
 
 .form--inline {
     display: inline-block;
+}
+
+input.is-error,
+select.is-error,
+textarea.is-error {
+    background: $light-red;
+    border: 1px solid $dark-red;
+    box-shadow:
+        inset 0 2px 0 $red,
+        inset 2px 0px 0 $red,
+        inset -2px 0px 0 $red,
+        inset 0px -2px 0 $red;
+}
+
+.error-list {
+    background: $error-color;
+    margin-left: 0;
+    padding: 0 2em;
+    list-style-type: disc;
+    color: $white;
+    li {
+        @include padding-y(.25em);
+    }
 }
 
 .js-fav label {
