--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -1,9 +1,11 @@
 .icon {
+    display: inline-block;
     position: relative;
+
+    top: -1px;
     width: 1em;
     height: 1em;
-    display: inline-block;
-    top: -1px;
+    vertical-align: middle;
 }
 
 .icon:after {
